tests/correctness/systolic/array-1.expect
---STDERR---
Stage 'verilog' had a non-zero exit code.
---------------- stderr ----------------
%Error: /var/folders/6q/t70wp1n54pd1dlp4q9m58ft00000gn/T/tmpj2wzpjzm:1:1: syntax error, unexpected IDENTIFIER
    1 | acc.out -> [add.left]
      | ^~~
%Error: Exiting due to 1 error(s)

